# cli-template-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
src/: lib.rs  main.rs
tests/: stateless-journey.sh
tests/snapshots/: failure-missing-input-file
