[package]
name = "foobar"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false
edition = "2021"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
anyhow = "1.0.31"
thiserror = "1.0.48"

[[bin]]
name="foobar"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true
